frontend/test/typecheck/error/nonint-array-size.fc
int main() {
    float[true] float_array;
    return 0;
}
